Changes in version 0.7-11 (15-07-2012, Rev. 1377)
================================================

- Fixed a bug introduced in the last versions:
  In the GUI the alpha-Field was always set back to 0.05 regardless 
  of what the user entered.

- Stated at more places what parametric tests do and 
  which prerequisites must be met.
  Also there is no default anymore for parametric tests.
  The user has to decide between "simple-parametric" and "Bretz2011".
  
- Round output of power simulations to level of precision.

- When graphs are saved from the GUI the slot graph@m is now
  always numeric when no variables are involved.  

- Method calcPower does not always set the seed as default.

- Power simulations for different variable values. 

- The GUI is updated immediately after renaming of nodes.

- The Reset Button resets to the graph with variables.  

- A backslash is allowed in node names (e.g. \alpha) in the GUI.

- corMatWizard is a new function that opens a Java dialog for
  correlation matrix creation.
  
- Fixed a rather unimportant bug that unintended entering of 
  Infinity (e.g. "2/0") causes a loop of error messages.

- Extended unit tests. See method unitTestsGMCP.
  Option extended=TRUE will run small power simulations.
  Option java=TRUE will run JUnit tests for GUI testing.
  Option interactive=TRUE will run interactive tests.
  
- Added a few message dialogs with additional information.
  All of these can be disabled by a CheckBox:
  "Don't show me this info again."

- Epsilon edges can be (optionally) show as dashed lines.

- New example graph from Ferber et al. 2011.


Changes in version 0.7-10 (15-06-2012, Rev. 1291)
================================================

- New self test function doUnitTestsForGMCP to check whether
  the R unit test suite for gMCP can complete without errors.

- To reduce problems for older systems our C code does not contain 
  any C99 features any more. (For R > 2.12 an ISO C99 C compiler is 